# roselib

./: .gitignore  CMakeLists.txt  License
include/: library.hpp  roselib.hpp
include/roselib/: AnsiSequence.hpp  Logger.hpp  Predicates.hpp  UnitTester.hpp  predicates.hpp
include/roselib/Predicates/: begin_with.hpp  end_with.hpp
include/roselib/UnitTester/: UnitTesterBase.hpp  UnitTesterConditional.hpp  UnitTesterFunction.hpp  UnitTesterObject.hpp  utils.hpp
include/roselib/impl/: UnitTesterFunction.tpp  predicates.tpp  roselib_core.hpp  tester.tpp
src/: Logger.cpp  UnitTester.cpp  UnitTesterBase.cpp  UnitTesterConditional.cpp  predicates.cpp
test/: begin_with.cpp  callback.cpp  end_with.cpp  logger.cpp  main.cpp  predicates.cpp  unit_tester.cpp
